--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "npx karma start karma.conf.js --browsers Chrome",
     "start": "npx webpack",
     "server": "npx webpack-dev-server --config ./webpack.config.js --open"
   },
@@ -23,12 +23,22 @@
     "@babel/preset-env": "^7.4.2",
     "babel-loader": "^8.0.5",
     "babel-plugin-syntax-dynamic-import": "^6.18.0",
+    "chai": "^4.2.0",
     "clean-webpack-plugin": "^2.0.1",
     "css-loader": "^2.1.1",
+    "faker": "^4.1.0",
     "html-webpack-plugin": "^3.2.0",
+    "karma": "^4.0.1",
+    "karma-chrome-launcher": "^2.2.0",
+    "karma-mocha": "^1.3.0",
+    "karma-mocha-reporter": "^2.2.5",
+    "karma-phantomjs-launcher": "^1.0.4",
+    "karma-webpack": "^3.0.5",
     "mini-css-extract-plugin": "^0.5.0",
+    "mocha": "^6.1.2",
     "node-sass": "^4.11.0",
     "sass-loader": "^7.1.0",
+    "sinon": "^7.3.1",
     "style-loader": "^0.23.1",
     "webpack": "^4.29.6",
     "webpack-cli": "^3.3.0",
